--- a/.github/workflows/Lede.yml
+++ b/.github/workflows/Lede.yml
@@ -28,7 +28,7 @@ on:
       CONFIG_FILE:
         description: '请选择配置文件'
         required: true
-        default: 'x86_64'
+        default: 'ledek3'
         type: choice
         options:
           - 'aarch64'
