--- a/.github/workflows/Lienol.yml
+++ b/.github/workflows/Lienol.yml
@@ -31,7 +31,7 @@ on:
       CONFIG_FILE:
         description: '请选择配置文件'
         required: true
-        default: 'x86_64'
+        default: 'k3'
         type: choice
         options:
           - 'aarch64'
