--- a/.github/workflows/Lede.yml
+++ b/.github/workflows/Lede.yml
@@ -38,7 +38,7 @@ on:
           - 'phicomm_k2p'
           - 'x86_32'
           - 'x86_64'
-          - 'xiaomi_mi-router-4a-gigabit'
+          - 'ledek3'
           - 'xiaomi_redmi-router-ac2100'
           - 'xiaomi_redmi-router-ax6s'
           - 'xiaoyu_xy-c5'
